Closed
Bug 1806847
Opened 2 years ago
Closed 2 years ago
Move WebTransport parent execution off PBackground to SocketThread
Categories
(Core :: Networking: HTTP, defect)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
110 Branch
Tracking | Status | |
---|---|---|
firefox110 | --- | fixed |
People
(Reporter: jesup, Assigned: jesup)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Currently we Bind() the parent side of the WebTransport IPC actor on the PBackground thread; it should move to SocketThread, since the WebTransport protocol API requires that (connections have to go through MainThread to use HttpConnect, note).
Assignee | ||
Comment 1•2 years ago
|
||
Depends on D165182
Pushed by rjesup@wgate.com:
https://hg.mozilla.org/integration/autoland/rev/bfe4f637a124
Move WebTransport parent-side binding to SocketThread r=nika
Comment 3•2 years ago
|
||
Backed out for causing bp-hybrid bustages in dist/include/mozilla/RefPtr.h
Backout link: https://hg.mozilla.org/integration/autoland/rev/510acd5ca7f2ea8bdf5d8109145b37b3de9e184d
/builds/worker/workspace/obj-build/dist/include/mozilla/RefPtr.h(50,38): error: member access into incomplete type 'mozilla::dom::WritableStream'
Flags: needinfo?(rjesup)
Pushed by rjesup@wgate.com:
https://hg.mozilla.org/integration/autoland/rev/3cb0c439a7c6
Move WebTransport parent-side binding to SocketThread r=nika
Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(rjesup)
Comment 5•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox110:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•