Bug 1806847: Move WebTransport parent-side binding to SocketThread r=nika

Differential Revision: https://phabricator.services.mozilla.com/D165295