dom/webtransport/parent/WebTransportParent.h
@@ -19,14 +19,14 @@ class WebTransportParent : public PWebTransportParent {
  public:
   WebTransportParent() = default;
 
-  // XXX Threadsafe??
   NS_INLINE_DECL_THREADSAFE_REFCOUNTING(WebTransportParent, override)
 
-  bool Init(const nsAString& aURL, const bool& aDedicated,
-            const bool& aRequireUnreliable, const uint32_t& aCongestionControl,
-            // Sequence<WebTransportHash>* aServerCertHashes,
-            Endpoint<PWebTransportParent>&& aParentEndpoint,
-            std::function<void(const nsresult&)>&& aResolver);
+  static void Create(const nsAString& aURL, const bool& aDedicated,
+                     const bool& aRequireUnreliable,
+                     const uint32_t& aCongestionControl,
+                     // Sequence<WebTransportHash>* aServerCertHashes,
+                     Endpoint<PWebTransportParent>&& aParentEndpoint,
+                     std::function<void(const nsresult&)>&& aResolver);
 
   mozilla::ipc::IPCResult RecvClose(const uint32_t& aCode,
                                     const nsACString& aReason);
